# R4.DevCloud10

ADAM-Kylian/: reponses.txt
ADAM-Kylian/exercice1/project/exemples/exercice1/: requete.json
ADAM-Kylian/exercice1/project/monprojet/: db.sqlite3
ADAM-Kylian/exercice1/project/monprojet/monapi/: models.py  serializer.py  urls.py  views.py
ADAM-Kylian/exercice2/agence bancaire/: client-nats.py  compte.py  date.py  montant.py
ADAM-Kylian/exercice2/coucou ville/: envoi10msg.py  reception.py  reception2.py  reception3.py
API/: httpbind1.py  httpbind2.py
API/fastapi_mastercard_project/: .env  .gitignore  pyproject.toml  python-dotenv
API/fastapi_mastercard_project/env/: pyvenv.cfg
API/fastapi_mastercard_project/src/fastapi_mastercard/: config.py  main.py  mastercard_client.py
API/fastapi_mastercard_project/tests/: test_main.py
NATS/1/: client-nats.py  receiver-nats.py
NATS/2/: client-nats.py  receiver-colmar.py  receiver-grandest.py  receiver-strasbourg.py
project/exemples/: requete.json
project/monprojet/: db.sqlite3
project/monprojet/monapi/: apps.py  commentairelistapiview.py  models.py  serializer.py  urls.py  views.py
project/monprojet/monprojet/: settings.py  urls.py
project/service_client/: db.sqlite3  manage.py
project/service_client/monapi/: models.py  serializer.py  urls.py  views.py
project/service_client/monapi/migrations/: 0001_initial.py  0002_alter_commentaire_date_publication_and_more.py  0003_alter_commentaire_date_publication.py  0004_client_delete_commentaire.py
project/service_client/service_client/: asgi.py  settings.py  wsgi.py
