[tool.poetry]
name = "fastapi_mastercard_project"
version = "0.1.0"
description = "FastAPI project with Mastercard API integration (sandbox)"
authors = ["Ton Nom <ton.email@example.com>"]
packages = [{include = "fastapi_mastercard", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
httpx = "^0.24.1"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
pydantic = "^1.10.9"
mastercard-oauth1-signer = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
