[tool.poetry]
name = "fastapi_mastercard_project"
version = "0.1.0"
description = "FastAPI project with Mastercard API integration (sandbox)"
authors = ["Ton Nom <ton.email@example.com>"]
packages = [{include = "fastapi_mastercard", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
httpx = "^0.24.1"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
pydantic = "^1.10.9"
mastercard-oauth1-signer = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff="^0.3.3"
black="^24.3.0"
aypy = "^1.9.8"

[tool.black]
line-length=88

[tool.ruff]
select=["E","F","I"]
fixable=["ALL"]
exclude=[".git",".mypy_cache",".ruff_cache"]
line-length=88

[tool.mypy]
disallow_any_generics=true
disallow_subclassing_any=true
disallow_untyped_calls=true
disallow_untyped_defs=true
disallow_incomplete_defs=true
check_untyped_defs=true
no_implicit_optional=true
warn_unused_ignores=true
warn_return_any=true
strict_equality=true
disallow_untyped_decorators=true
ignore_missing_imports=true
implicit_reexport=true
plugins="pydantic.mypy"

[tool.pydantic-mypy]
init_forbid_extra=true
init_typed=true
warn_required_dynamic_aliases=true
warn_untyped_fields=true

[build-system]
requires=["poetry-core"]
build-backend="poetry.core.masonry.api"